<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:layout_marginTop="@dimen/margin"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/space_158234" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/subtitle"
        android:textColor="@android:color/white"
        android:textSize="@dimen/subtitle_text_size"
        android:textStyle="normal" />

</RelativeLayout>